2003-06-14	ujwal

    * Reverted back to v1.20 of VT100Typesetter accunting for line 
      endings at the end of the line instead of beginning since the 
      other version was more problematic. This version now handles 
      new line characters at the end correctly.

2003-06-13	ujwal

    * Fixed bug in VT100Typesetter line bounds calculation where 
      the new line character should be at the beginning rather 
      than at the end. Otherwise text ending in a new line character 
      will not display the ending new line.

2003-06-12	ujwal

    * Created VT100TextStorage class subclassing NSTextStorage.

2003-06-11	ujwal

    * Using embedded FreeMono font for graphical characters 
      since that font provides all the glyphs.
      
    * VT100Terminal does not set NSCharacterWidthAttributeName for ascii text.
      This is so that the custom typesetter can easily check 
      for double width characters by just looking for the existence of the 
      attribute.
      
    * Created VT100LayoutManager, a NSLayoutManager subclass to speed up 
      some operations such as window resizing.

2003-06-10	ujwal

    * Bug fixes and speed improvement to VT100Typesetter.

2003-06-09	fabian
    * Let VT100Typesetter layout every glyph. Glyph alignment
      problem solved. But, 
        1. speed is much slower (~2x), 
        2. change font with a large scrollback buffer takes for
           ever (due to re-layout, I think).
    * Added double width character support in VT100Typesetter.
           
2003-06-09	ujwal

    * Caching new line string in VT100Screen for big speed boost.

2003-06-08	ujwal

    * Updated localizations including strings dictionaries.
    
2003-06-05	ujwal

    * Custom typesetter to speed up display. Needs more testing. 
      To activate, turn on USE_CUSTOM_LAYOUT in iTerm.h

2003-06-01	ujwal

    * Updated Korean translation from TaeYoung Oh.
    
    * Hiding cursor during typing.

2003-05-31	ujwal
    